--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,36 +1,43 @@
 name: em
 description: This Flutter application allows you track how much you spent, you actual income...
 
-publish_to: 'none' 
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: ">=3.1.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  animated_flip_counter: ^0.2.6
-  #cloud_firestore: ^4.9.1
-  #firebase_core: ^2.15.1
-  #firebase_storage: ^11.2.6
-  flutter_animate: ^4.2.0+1
-  flutter_image_compress: ^2.0.4
-  fluttertoast: ^8.2.2
-  font_awesome_flutter: ^10.5.0
-  image_picker: ^1.0.4
-  lottie: ^2.6.0
-  uuid: ^4.0.0
-  #get: ^4.6.6
+  animated_flip_counter: ^0.3.4
+  flutter_animate: ^4.5.2
+  font_awesome_flutter: ^10.8.0
+  image_picker: ^1.1.2
+  lottie: ^3.3.1
+  uuid: ^4.5.1
   hive: ^2.2.3
-  objectbox: ^2.2.1
-  objectbox_flutter_libs: ^2.2.1
-  date_format: ^2.0.7
-  animated_text_kit: ^4.2.2
-  flutter_native_splash: ^2.3.2
-  #sqflite: ^2.3.0
+  objectbox: ^2.5.1
+  objectbox_flutter_libs: ^2.5.1
+  date_format: ^2.0.9
+  animated_text_kit: ^4.2.3
+  flutter_native_splash: ^2.4.4
+  fluttertoast: ^8.2.10
+
+  #animated_flip_counter: ^0.2.6
+  #flutter_animate: ^4.2.0+1
+  #font_awesome_flutter: ^10.5.0
+  #image_picker: ^1.0.4
+  #lottie: ^2.6.0
+  #uuid: ^4.0.0
+  #hive: ^2.2.3
+  #objectbox: ^2.2.1
+  #objectbox_flutter_libs: ^2.2.1
+  #date_format: ^2.0.7
+  #animated_text_kit: ^4.2.2
+  #flutter_native_splash: ^2.3.2
+  #fluttertoast: ^8.2.10
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +49,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
-
   uses-material-design: true
 
   assets:
